# spize

./: .env.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.bsl  README.md  SECURITY.md  TODOS.md  package-lock.json
.github/workflows/: ci.yml  fly-deploy.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml
crates/aex-audit/: Cargo.toml
crates/aex-audit/src/: lib.rs
crates/aex-billing/: Cargo.toml
crates/aex-control-plane/: Cargo.toml
crates/aex-control-plane/migrations/: 20260420000003_data_plane.sql  20260423000001_agent_keys.sql  20260423000002_api_keys.sql  20260423000003_stripe_events.sql  20260423000004_subscriptions.sql  20260423000005_customers.sql  20260423000006_magic_link_tokens.sql
crates/aex-control-plane/src/: clock.rs  config.rs  email.rs  endpoint_validator.rs  error.rs  health_monitor.rs  lib.rs  main.rs  metrics.rs  session.rs  verify.rs
crates/aex-control-plane/src/db/: agent_keys.rs  agents.rs  api_keys.rs  customers.rs  magic_link_tokens.rs  mod.rs  stripe_events.rs  subscriptions.rs  transfers.rs
crates/aex-control-plane/src/routes/: admin.rs  agents.rs  inbox.rs  metered.rs  metrics.rs  mod.rs  transfers.rs
crates/aex-control-plane/src/routes/customer/: api_keys.rs  auth.rs  mod.rs
crates/aex-control-plane/src/routes/webhooks/: mod.rs  stripe.rs
crates/aex-control-plane/tests/: admin_api_keys.rs  admin_auth.rs  agents_rotate_key.rs  api_key_auth.rs  customer_auth.rs  error_runbook.rs  health_monitor.rs  metrics_endpoint.rs  stripe_webhook.rs
crates/aex-control-plane/tests/common/: mod.rs
crates/aex-core/: Cargo.toml
crates/aex-core/src/: endpoint.rs  lib.rs  signature.rs  wire.rs
crates/aex-core/tests/: proptests.rs
crates/aex-data-plane/: Cargo.toml
crates/aex-data-plane/src/: blob.rs  error.rs  lib.rs  main.rs  server.rs  ticket.rs
crates/aex-data-plane/tests/: end_to_end.rs
crates/aex-identity/: Cargo.toml
crates/aex-identity/src/: etere_citizen.rs
crates/aex-net/: Cargo.toml
crates/aex-net/src/: captive.rs  dns.rs  http.rs  lib.rs  retry.rs
crates/aex-net/tests/conformance/: main.rs  retry.rs
crates/aex-policy/: Cargo.toml
crates/aex-scanner/: Cargo.toml
crates/aex-tunnel/: Cargo.toml
crates/aex-tunnel/src/: frp.rs  iroh.rs  lib.rs  orchestrator.rs  tailscale.rs
crates/aex-tunnel/tests/: adr_0011_keypair_bridge.rs  cloudflared_integration.rs  iroh_integration.rs
deploy/: docker-compose.dev.yml
deploy/fly/: Dockerfile  README.md  fly.toml
docs/: getting-started.md  protocol-v1.md
docs/decisions/: 0001-breaking-wire-v1-3-0-beta.md  0002-iroh-first-class-transport.md  0003-fly-io-multi-process-colocation.md  0004-go-sdk-phase-4-java-phase-5.md  0005-compliance-internal-no-vanta.md  0006-did-ethr-minimal-phase-4.md  0007-free-beta-then-paid-sep-2026.md  0008-zero-client-side-telemetry.md  0009-bsl-to-apache-conversion-q4.md  0010-self-funded-plus-nlnet.md  0011-same-keypair-spize-and-iroh.md  0012-transport-negotiation-sender-ranked-serial-sticky.md  0013-reachable-at-jsonb-column.md  0014-transport-validation-budget.md  0015-iroh-pinned-with-fallback.md  0016-single-region-ams-derp.md  0017-captive-portal-shared-crate.md  0018-wire-v1-frozen-capability-bits-v2-phase-6.md  0019-iroh-graceful-degrade.md  0020-admin-blob-first-write-wins.md  0021-endpoint-health-asymmetric-debouncing.md  0022-stripe-webhook-transactional-inbox.md  0023-captive-portal-rich-error.md  0024-formal-key-rotation-v1-3.md  0025-jws-signed-agent-card.md  0026-jws-signed-did-web.md  0027-file-blob-source-atomic-rename.md  0028-relative-time-tickets-v1-time.md  0029-normative-spec-plus-conformance.md  0030-aex-net-crate-bounded-scope.md  0031-property-plus-scenario-plus-chaos.md  0032-fly-io-testbed-fuzz-golden-vectors.md  0033-global-semaphore-50-permits.md  0034-opentelemetry-everywhere.md  0035-three-tier-alerts-plus-slo.md  0036-coordinated-rollout-dual-wire.md  0037-bcp-contributor-onramp-adr-log.md  README.md
docs/runbooks/: README.md  agent-already-exists.md  agent-not-found.md  agent-not-registered-or-revoked.md  api-key-invalid.md  api-key-missing.md  clock-skew.md  conflict.md  endpoint-unreachable.md  internal-error.md  magic-link-invalid.md  malformed-nonce.md  max-keys-reached.md  no-active-subscription.md  nonce-replay.md  rotation-race.md  session-invalid.md  signature-invalid.md  stripe-disabled.md  stripe-event-malformed.md  stripe-processing-failed.md  stripe-signature-invalid.md  stripe-signature-missing.md  transfer-not-found.md  unauthorized.md  wrong-recipient.md
web/: package-lock.json  package.json
web/src/app/waitlist/: page.tsx
