[workspace]
resolver = "2"
members = [
    "crates/aex-core",
    "crates/aex-identity",
    "crates/aex-control-plane",
    "crates/aex-audit",
    "crates/aex-scanner",
    "crates/aex-policy",
    "crates/aex-tunnel",
    "crates/aex-billing",
    "crates/aex-data-plane",
    "crates/aex-net",
]

[workspace.package]
edition = "2021"
version = "1.2.0-alpha.3"
license = "Apache-2.0"
repository = "https://github.com/icaroholding/aex"
homepage = "https://spize.io"
authors = ["Icaro Holding <oss@spize.io>"]
rust-version = "1.75"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors & logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Crypto
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core", "std"] }
k256 = { version = "0.13", features = ["ecdsa"] }

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "limit", "timeout", "cors"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "macros", "migrate"] }

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Futures + regex
futures = "0.3"
regex = "1"

# Network (shared by aex-net, aex-control-plane, aex-data-plane)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime"] }
url = "2"
