[package]
name = "aex-billing"
description = "Billing provider abstraction for Spize: tier lookup + metered usage + subscription state."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aex-policy = { path = "../aex-policy", version = "=1.2.0-alpha.3" }

async-trait.workspace = true
serde = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
time = { workspace = true }

[dev-dependencies]
