[package]
name = "aex-control-plane"
description = "Agent Exchange Protocol (AEX) control plane: identity registry, routing, policy, audit orchestration."
version.workspace = true
edition.workspace = true
license = "BUSL-1.1"
repository.workspace = true
homepage = "https://spize.io"
authors = ["Icaro Holding <oss@spize.io>"]
keywords = ["aex", "agent", "protocol", "control-plane"]
categories = ["network-programming"]

[[bin]]
name = "aex-control-plane"
path = "src/main.rs"

[dependencies]
aex-core = { path = "../aex-core", version = "=1.2.0-alpha.3" }
aex-audit = { path = "../aex-audit", version = "=1.2.0-alpha.3" }
aex-scanner = { path = "../aex-scanner", version = "=1.2.0-alpha.3" }
aex-policy = { path = "../aex-policy", version = "=1.2.0-alpha.3" }
aex-net = { path = "../aex-net", version = "=1.2.0-alpha.3" }

rand.workspace = true

# Async runtime
tokio = { workspace = true }
async-trait.workspace = true

# HTTP
axum.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "limit", "timeout", "cors"] }

# DB
sqlx = { workspace = true }

# Serde
serde = { workspace = true }
serde_json.workspace = true

# Errors & logging
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Crypto (for signature verification)
ed25519-dalek.workspace = true
hex.workspace = true
sha2.workspace = true

# Time
time = { workspace = true }
uuid = { workspace = true }

# HTTP client — used to validate the reachability of a sender's
# tunnel_url in the M2 `send_via_tunnel` flow before issuing tickets.
# The AEX DoH resolver + TLS config are supplied by `aex-net`.
reqwest = { workspace = true }

[dev-dependencies]
rand.workspace = true
tower = { workspace = true, features = ["util"] }
tempfile = "3"
