[package]
name = "aex-core"
description = "Core types, traits, and errors for Agent Exchange Protocol (AEX)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde = { workspace = true }
thiserror.workspace = true
uuid = { workspace = true }

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
