[package]
name = "aex-data-plane"
description = "Agent Exchange Protocol (AEX) data plane: sender-side HTTP server that streams blobs behind signed tickets."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://spize.io"
authors = ["Icaro Holding <oss@spize.io>"]
keywords = ["aex", "data-plane", "peer-to-peer", "file-transfer"]
categories = ["network-programming"]

[[bin]]
name = "aex-data-plane"
path = "src/main.rs"

[dependencies]
aex-core = { path = "../aex-core", version = "=1.2.0-alpha.3" }
aex-scanner = { path = "../aex-scanner", version = "=1.2.0-alpha.3" }
aex-audit = { path = "../aex-audit", version = "=1.2.0-alpha.3" }
aex-tunnel = { path = "../aex-tunnel", version = "=1.2.0-alpha.3" }

# HTTP
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "limit", "timeout"] }

# Async
tokio = { workspace = true }
async-trait.workspace = true
futures.workspace = true

# Serde
serde = { workspace = true }
serde_json.workspace = true

# Crypto
ed25519-dalek.workspace = true
hex.workspace = true
sha2.workspace = true

# Errors & logging
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
time = { workspace = true }

# HTTP client (used by the binary to self-verify the tunnel before
# declaring AEX_READY=1). Rustls-only to avoid OpenSSL dependency.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
rand.workspace = true
tempfile = "3"
