[package]
name = "aex-data-plane"
description = "Agent Exchange Protocol (AEX) data plane: sender-side HTTP server that streams blobs behind signed tickets."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://spize.io"
authors = ["Icaro Holding <oss@spize.io>"]
keywords = ["aex", "data-plane", "peer-to-peer", "file-transfer"]
categories = ["network-programming"]

[[bin]]
name = "aex-data-plane"
path = "src/main.rs"

[dependencies]
aex-core = { path = "../aex-core", version = "=1.2.0-alpha.3" }
aex-scanner = { path = "../aex-scanner", version = "=1.2.0-alpha.3" }
aex-audit = { path = "../aex-audit", version = "=1.2.0-alpha.3" }
aex-tunnel = { path = "../aex-tunnel", version = "=1.2.0-alpha.3" }

# HTTP
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "limit", "timeout"] }

# Async
tokio = { workspace = true }
async-trait.workspace = true
futures.workspace = true

# Serde
serde = { workspace = true }
serde_json.workspace = true

# Crypto
ed25519-dalek.workspace = true
hex.workspace = true
sha2.workspace = true

# Errors & logging
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
time = { workspace = true }

# URL parsing for the binary's readiness check.
url = { workspace = true }

# Direct DNS resolver (queries 1.1.1.1 / 8.8.8.8 rather than the OS
# resolver) used by the binary's readiness check. Bypasses macOS's
# mDNSResponder which caches NXDOMAIN for ~60s and would otherwise
# poison retries when a freshly-created Cloudflare quick-tunnel URL
# hasn't landed in public DNS yet at the time of the first lookup.
# `system-config` is NOT enabled here by design: we want hickory to
# ignore /etc/resolv.conf and talk to Cloudflare directly.
hickory-resolver = { workspace = true }

[dev-dependencies]
rand.workspace = true
tempfile = "3"
