[package]
name = "aex-net"
description = "Agent Exchange Protocol (AEX) shared network helpers: DoH DNS resolver, pre-configured HTTP client factory, normative retry policy, captive-portal detection."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://spize.io"
authors = ["Icaro Holding <oss@spize.io>"]
keywords = ["aex", "network", "dns", "retry", "http"]
categories = ["network-programming"]

[dependencies]
hickory-resolver = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing.workspace = true
serde = { workspace = true }
rand.workspace = true

[dev-dependencies]
axum = { workspace = true }
proptest = "1"
tokio = { workspace = true, features = ["full", "test-util"] }
