[package]
name = "aex-policy"
description = "Policy engine for Agent Exchange Protocol (AEX): pluggable (DefaultPolicy, TierPolicy, Cedar planned)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aex-core = { path = "../aex-core", version = "=1.2.0-alpha.1" }
aex-scanner = { path = "../aex-scanner", version = "=1.2.0-alpha.1" }

async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
