[package]
name = "aex-scanner"
description = "Content inspection pipeline for Agent Exchange Protocol (AEX): size, magic-bytes, EICAR, regex prompt-injection."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aex-core = { path = "../aex-core", version = "=1.3.0-beta.1" }

async-trait.workspace = true
futures.workspace = true
regex.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
time = { workspace = true }
