[package]
name = "aex-tunnel"
description = "Tunnel abstraction for the Spize data plane: trait + Cloudflare quick-tunnel + test stub."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aex-core = { path = "../aex-core" }
async-trait.workspace = true
iroh.workspace = true
reqwest = { workspace = true }
serde = { workspace = true }
tempfile = "3"
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tracing-subscriber.workspace = true
